<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BlogEdit"
    android:background="@color/mainColor">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/welcome_text"
        android:layout_marginTop="10sp"
        android:fontFamily="@font/alegreya_bold"
        android:gravity="center"
        android:text="@string/blog_edit_welcome"
        android:textSize="20sp"
        android:textColor="@color/textColor"
        />

    <LinearLayout
        android:id="@+id/blog_content_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_text"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        >

        <TextView
            android:id="@+id/info_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/info_content_blog1"
            android:textColor="#ffffff"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/blog_content_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="true"
            android:layout_marginTop="5sp"
            android:fontFamily="@font/abel"
            android:hint="@string/hint_blog"
            android:includeFontPadding="false"
            android:inputType="textMultiLine"
            android:lines="6"
            android:textColor="@color/white"
            android:gravity="left"
            android:textColorHint="@color/white"
            android:textSize="12sp"
            android:background="@drawable/edittext_border"
            android:padding="3dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/blog_content_enter"
        android:orientation="horizontal"
        android:id="@+id/photo_upload"
        android:layout_marginTop="20sp"
        android:layout_marginHorizontal="20sp"
        android:gravity="center"
        >

        <Button
            android:id="@+id/upload_image_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/upload_photo"
            android:textColor="#ffffff"
            android:textSize="13sp"
            android:backgroundTint="@color/color_button"
            />

        <ImageView

            android:id="@+id/upload_block"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:cursorVisible="true"
            android:layout_margin="5dp"
            android:includeFontPadding="false"
            android:background="@drawable/edittext_border"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/themes_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/photo_upload"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        >

        <TextView
            android:id="@+id/themes_enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/themes"
            android:textColor="#ffffff"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/themes_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="true"
            android:layout_marginTop="5sp"
            android:fontFamily="@font/abel"
            android:hint="@string/themesEnter"
            android:includeFontPadding="false"
            android:inputType="textMultiLine"
            android:lines="1"
            android:textColor="@color/white"
            android:gravity="left"
            android:textColorHint="@color/white"
            android:textSize="12sp"
            android:background="@drawable/edittext_border"
            android:padding="3dp"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/isUrl"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_margin="20sp"
        android:layout_below="@+id/themes_info"/>

    <Button
        android:id="@+id/add_blog_button"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/addblog"
        android:textSize="10sp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/addbutton"
        android:layout_below="@+id/themes_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />


</RelativeLayout>