<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor"
    tools:context=".MainActivity">



    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="140sp"
        android:layout_marginTop="40sp"
        android:layout_marginHorizontal="90sp"
        android:textAlignment="center"
        app:srcCompat="@drawable/image_removebg_preview__5_" />

    <TextView
        android:id="@+id/loginInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="15sp"
        android:fontFamily="@font/archivo_medium"
        android:text="SIGN UP"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/loginInfo2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginInfo"
        android:layout_marginHorizontal="50sp"
        android:maxLines="2"
        android:layout_marginTop="10sp"
        android:fontFamily="@font/archivo_medium"
        android:text="Sign up with your username, emal \nand password to continue"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_below="@+id/loginInfo2"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="40sp"
        android:background="#CFCCCC"
        android:hint="@string/hint_username"
        android:inputType="textPersonName"
        android:textColorHint="@color/hintColor"
        />
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_below="@+id/username"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="20sp"
        android:background="#CFCCCC"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/hintColor"
        />

    <LinearLayout
        android:id="@+id/password_toggle"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="20sp"
        android:layout_below="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50sp">

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:ems="10"
            android:background="#CFCCCC"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/hintColor"/>

        <ImageButton
            android:id="@+id/showHideBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="5sp"
            android:background="@color/enterBackground"
            app:srcCompat="@drawable/vector_2" />
    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/password_toggle"
        android:id="@+id/linearLayout2"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_width="match_parent">

        <Button
            android:id="@+id/forgot"
            android:layout_height="40sp"
            android:layout_width="wrap_content"
            android:text="@string/forgot"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/forgot"
            android:textSize="12sp"
            android:background="@android:color/transparent"
            android:layout_below="@+id/password_toggle"
            />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login"
        android:fontFamily="@font/montserrat_bold"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginTop="40sp"
        android:layout_marginHorizontal="40sp"
        android:backgroundTint="@color/color_button"
        android:text="@string/signin"
        />

    <LinearLayout
        android:id="@+id/signup"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20sp"
        android:layout_below="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/resultInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="Don’t have an account ?"
            android:textColor="@color/forgot"
            android:textSize="15sp" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign up"
            android:padding="0sp"
            android:textSize="15sp"
            android:background="@android:color/transparent"
            android:textColor="@color/color_button"
            />
    </LinearLayout>

</RelativeLayout>